Added Alter Table Functionality